# thermoRange

./: .babelrc  .dockerignore  .gitattributes  .gitconfig  .gitignore  .ncurc.json  .npmignore  .npmrc  .yarnrc  CMakeLists.txt  Gruntfile.js  bower.json  motd.txt  package-lock.json  package.json  readme.md  settings.js  settings.json  start-local-log-error.sh  start-local-log.sh  start-local-multi.sh  start-local-prod.cmd  start-local.cmd  start-local.sh
client/: index.html
client/app/: app.js  ngivr.js
client/assets/: style-dynamic.css  style-dynamic.scss  style.css
client/development-templates/: responsive-any-row-to-small-column.html  responsive-layout-2x2x1.html  responsive-layout-4x2x1.html
client/error/: 50x.html
client/shared/: ngivr-console.js  ngivr-keycode.js  ngivr-mongoose.js  ngivr-protocol.js  ngivr-settings.js  ngivr-string.js  ngivr-validation.js
lidar/lidar_srv/: Untitled.ipynb  main.py  out.csv  readme.md  requirements.txt  tasks.py  testdata.json
native/: opencv-qrcode-worker.cc  opencv-qrcode-worker.h  pi-worker.cc  pi-worker.h  thermo.cc
server/: app.js  build.js  debug.js  delay.js  master.js  routes.js  server-error-handler.js
server/auth/: auth.service.js  index.js
server/config/: express.js  master.slave.js  socketio.js
server/model-socket-raw/: html-template-comment.model.js  html-template-comment.socket.js  measuring-instrument.model.js  measuring-instrument.socket.js  ngivr-pdf-upload.socket.js  other-document-template.model.js  other-document-template.socket.js  other-document.model.js  other-document.socket.js  pdf-file.model.js  pdf-file.socket.js  template-instance.model.js  template-instance.socket.js  thermo-range-batch-frames.model.js  thermo-range-batch-point-cloud.model.js  thermo-range-batch-point-cloud.socket.js  thermo-range-batch.model.js
server/schema/: measuring-instruments.js  upsync.js  (+6 more)
(+694 files in other folders)
